snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1.pom.sha256
877ee3f3f06ca9403de742aae6f13d19587fa05dea3759841e2eedd6e5236c50